#
# Copyright (c) 2004-2006 The Trustees of Indiana University and Indiana
#                         University Research and Technology
#                         Corporation.  All rights reserved.
# Copyright (c) 2004-2005 The University of Tennessee and The University
#                         of Tennessee Research Foundation.  All rights
#                         reserved.
# Copyright (c) 2004-2005 High Performance Computing Center Stuttgart, 
#                         University of Stuttgart.  All rights reserved.
# Copyright (c) 2004-2005 The Regents of the University of California.
#                         All rights reserved.
# Copyright (c) 2006      Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
# 
# Additional copyrights may follow
# 
# $HEADER$
#

EXTRA_DIST = \
        distscript.csh \
        c_get_alignment.m4 \
        c_weak_symbols.m4 \
        cxx_find_template_parameters.m4 \
        cxx_find_template_repository.m4 \
        cxx_find_exception_flags.m4 \
        cxx_have_exceptions.m4 \
        f77_check_type.m4 \
        f77_find_ext_symbol_convention.m4 \
        f77_get_alignment.m4 \
        f77_get_sizeof.m4 \
        f90_check_type.m4 \
        f90_find_module_include_flag.m4 \
        f90_get_precision.m4 \
        f90_get_range.m4 \
        f90_get_sizeof.m4 \
        mca_acinclude.m4 \
        mca_configure.ac \
        mca_make_configure.pl \
        mca_no_configure_components.m4 \
        ompi_case_sensitive_fs_setup.m4 \
        ompi_check_optflags.m4 \
        ompi_check_pthread_pids.m4 \
        ompi_config_subdir.m4 \
        ompi_config_subdir_args.m4 \
        ompi_config_pthreads.m4 \
        ompi_config_solaris_threads.m4 \
        ompi_config_threads.m4 \
        ompi_configure_options.m4 \
        ompi_functions.m4 \
        ompi_get_version.m4 \
        ompi_get_version.m4sh \
        ompi_get_version.sh \
        ompi_make_stripped_flags.m4 \
        ompi_mca.m4 \
        ompi_setup_cc.m4 \
        ompi_setup_cxx.m4 \
        ompi_setup_f77.m4 \
        ompi_setup_f90.m4
